--- a/app/src/main/res/layout/item_city.xml
+++ b/app/src/main/res/layout/item_city.xml
@@ -13,6 +13,7 @@
         tools:src="@drawable/izh"/>
 
     <TextView
+        android:id="@+id/city_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin16"
